--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,14 +7,33 @@
     <title>Ricardo - Mobile First</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-   
-   
 </head>
-
 
 <header class="cabeçalho">
     <div class="container">
-        <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+        <input type="checkbox" id="menu" class="container__botao" />
+        <label for="menu">
+            <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+        </label>
+        <ul class="lista-menu">
+            <li class="lista-menu__titulo">Categorias</li>
+            <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Programação</a>
+            </li>
+            <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Front-end</a>
+            </li>
+            <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Infraestrutura</a>
+            </li>
+            <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Business</a>
+            </li>
+            <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">Design & UX</a>
+            </li>
+        </ul>
+        
         <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
     </div>
     <div class="container">
@@ -23,8 +43,6 @@
     </div>
 </header>
 
-
-
-
-
 </html>
+
+    
