--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ricardo - Mobile First</title>
+    <title>Igor - Mobile First</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -34,15 +33,27 @@
             </li>
         </ul>
         
-        <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+        <img src="AluraBooks/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
     </div>
     <div class="container">
-        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
-        <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-        <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
+        <a href="#"><img src="AluraBooks/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+        <a href="#"><img src="AluraBooks/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
+        <a href="#"><img src="AluraBooks/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
     </div>
 </header>
 
-</html>
 
-    
+<section class="banner">
+    <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+      <p class="banner__texto">
+    Encontre em nossa estante o que precisa para seu desenvolvimento!
+      </p>
+    <input
+        type="search"
+          class="banner__pesquisa"
+            placeholder="Qual será sua próxima leitura?"
+    />
+</section>
+
+
+</html>
