--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
   <section class="carrossel">
     <h2 class="carrossel__titulo">Novos lançamentos</h2>
+  </section>
     <!-- Slider main container -->
     <div class="swiper">
       <!-- Additional required wrapper -->
