--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><img src="img/ApacheKafka.png"
+        <div class="swiper-slide"><img src="img/Apachekafka.svg"
             alt="Livro sobre apache kafka e spring boot da alura books"></div>
         <div class="swiper-slide"><img src="img/Liderança.svg"
             alt="Livro sobre liderança em design design da alura books"></div>
@@ -118,7 +118,7 @@
 
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><img src="img/ApacheKafka.png"
+        <div class="swiper-slide"><img src="img/ApacheKafka.svg"
             alt="Livro sobre apache kafka e spring boot da alura books"></div>
         <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em design da alura books">
         </div>
@@ -164,48 +164,6 @@
 
 
   </section>
-
-  <section class="tópicos">
-    <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
-    <ul class="tópicos__lista">
-      <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Marketing Digital</a>
-      </li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Agile</a>
-      </li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Startups</a>
-      </li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">HTML & CSS</a>
-      </li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Python</a>
-      </li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">OO</a>
-      </li>
-      <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Java</a>
-      </li>
-    </ul>
-  </section>
-
-  <section class="contato">
-    <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-    <p class="contato__texto">
-      Atualizações de e-books, novos livros, promoções e outros.
-    </p>
-    <input type="email" placeholder="Cadastre seu e-mail" class="contato__email" />
-  </section>
-
-  <hr />
-
-  <footer class="rodapé">
-    <h2 class="rodapé__titulo">Grupo Alura</h2>
-  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
